--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port $PORT --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --prod",
+    "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
+  },
+  "engines": {
+    "node": "14.16.1",
+    "npm": "6.14.12"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~13.0.2",
+    "@angular/compiler-cli": "~13.0.0",
+    "typescript": "~4.4.3",
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
@@ -21,8 +30,10 @@
     "@angular/router": "~13.0.0",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.2",
     "firebase": "^9.6.0",
     "jquery": "^3.6.0",
+    "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
